gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-unsized_tuple_coercion.rs
fn main() {
    let _ : &(dyn Send,) = &((),);
// { dg-error ".E0658." "" { target *-*-* } .-1 }
}

